--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,8 @@ phases:
  install:
   commands:
    - npm install time
-   - aws cloudformation package --template-file samTemplate.yaml 
+   - aws cloudformation package --template-file samTemplate.yaml
+                                --stack-name MyBetaStack
                                 --s3-bucket sample-ci-cd-pipeline
                                 --output-template-file NewSamTemplate.yaml
 artifacts:
