--- a/samTemplate.yaml
+++ b/samTemplate.yaml
@@ -3,7 +3,7 @@ Transform: AWS::Serverless-2016-10-31
 Description: Outputs the time
 Resources:
  TimeFunction:
-  Type: AWS::Lambda::Function
+  Type: AWS::Serverless::Function
   Properties:
    Handler: index.handler
    Runtime: nodejs4.3
