--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,9 +2,7 @@ version: 0.1
 phases: 
  install:
   commands:
-   - npm run setup
-   - npm start
-   - npm run clean
+   - npm run build
    - aws cloudformation package --template-file Template.yaml 
                                 --output-template-file NewSamTemplate.yaml
 								--s3-bucket sample-ci-cd-pipeline
