--- a/Template.yaml
+++ b/Template.yaml
@@ -2,17 +2,17 @@ AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 Description: Nodejs lambda
 Resources:
- TimeFunction:
+ NodeFunction:
   Type: AWS::Serverless::Function
   Properties:
    Handler: index.handler
    Runtime: nodejs4.3
    CodeUri: ./
    Events:
- MyTimeApi:
-  Type: Api
-  Properties:
-   Path: /nodeResource
-   Method: GET
+   MyTimeApi:
+    Type: Api
+    Properties:
+     Path: /nodeResource
+     Method: GET
 
 
