--- a/Template.yaml
+++ b/Template.yaml
@@ -9,10 +9,10 @@ Resources:
    Runtime: nodejs4.3
    CodeUri: ./
    Events:
-   MyTimeApi:
-    Type: Api
-    Properties:
-     Path: /nodeResource
-     Method: GET
+    MyNodeApi:
+     Type: Api
+     Properties:
+      Path: /nodeResource
+      Method: GET
 
 
